Fix Bug on mobile when keyboard appear

--- a/app/dashboard/dashboard.component.css
+++ b/app/dashboard/dashboard.component.css
@@ -30,6 +30,7 @@
 .map-col {
   padding-left: 0;
   padding-right: 0;
+  height: 100%;
 }
 .cards-col {
   height: 100%;
